# pypowerwall-server-async-fix

./: AGENTS.md  MQTT.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: legacy.py
app/core/: gateway_manager.py
app/models/: gateway.py
app/mqtt/: __init__.py  ha_discovery.py  publisher.py
app/static/: index.html
mqtt-tools/: README.md  monitor.py
tests/: test_api_legacy.py  test_gateway_manager.py  test_mqtt_ha_discovery.py  test_mqtt_publisher.py
